######### AU280 change log ##############
1.1
Modified NUM_LANES parameter for cmac_usplus IP from 4 to 4x25

1.0
AU280 Production board support 

