@@ -1,5 +1,6 @@
 ######### AU280 change log ##############
 1.1
+Added HBM_CATTRIP pin loc
 Modified NUM_LANES parameter for cmac_usplus IP from 4 to 4x25
 
 1.0
